# PlutoUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_debug.bat  build_xcode_debug.sh  build_xcode_release.sh  generate.sh  generate_debug.sh  generate_release.sh  generate_xcode.sh
GenericUtils/: CMakeLists.txt  CompareTests.cpp  ContainerUtilsTests.cpp  FileSystemTests.cpp  IteratorUtilsTests.cpp  LRUCacheTests.cpp  LocaleTests.cpp  LoggerTests.cpp  RangeTests.cpp  ScopeExitActionsTests.cpp  StandardTests.cpp  StopwatchTests.cpp  StringUtilsTests.cpp
GenericUtilsTests/: CMakeLists.txt  CompareTests.cpp  ContainerUtilsTests.cpp  FileSystemTests.cpp  GenericTests.cpp  IteratorUtilsTests.cpp  LRUCacheTests.cpp  LocaleTests.cpp  LoggerTests.cpp  Main.cpp  RangeTests.cpp  SafeLRUCacheTests.cpp  StandardTests.cpp  StopwatchTests.cpp  StringUtilsTests.cpp
docs/: CMakeLists.txt  Compare.md  ContainerUtils.md  FileSystem.md  IteratorUtils.md  LRUCache.md  Locale.md  Logger.md  Range.md  ScopeExitActions.md  Standard.md  Stopwatch.md  StringUtils.md  compare.md  container.md  container_utils.md  filesystem.md  iterator.md  iterator_utils.md  locale.md  logger.md  lru_cache.md  platform.md  platform_utils.md  pluto.md  range.md  safe_lru_cache.md  scope.md  scope_exit_actions.md  scope_utils.md  standard.md  stopwatch.md  string.md  string_utils.md  thread_pool.md  unicode.md  value.md  value_utils.md  version.md
examples/: CMakeLists.txt
examples/CustomApp/: CMakeLists.txt  CustomApp.cpp
examples/LogDefault/: CMakeLists.txt  LogDefault.cpp
examples/LogHideSourceInfo/: CMakeLists.txt  LogHideSourceInfo.cpp
examples/LogNoSingleton/: CMakeLists.txt  LogNoSingleton.cpp
examples/LogSplitLevels/: CMakeLists.txt  LogSplitLevels.cpp
examples/LogWithMacros/: CMakeLists.txt  LogWithMacros.cpp
examples/LogWithSetters/: CMakeLists.txt  LogWithSetters.cpp
examples/custom_app/: CMakeLists.txt  custom_app.cpp
examples/log_default/: CMakeLists.txt  log_default.cpp
examples/log_extra_column/: CMakeLists.txt  log_extra_column.cpp
examples/log_extra_data/: CMakeLists.txt  log_extra_data.cpp
examples/log_hide_source_info/: CMakeLists.txt  log_hide_source_info.cpp
examples/log_no_singleton/: CMakeLists.txt  log_no_singleton.cpp
examples/log_split_levels/: CMakeLists.txt  log_split_levels.cpp
examples/log_with_macros/: CMakeLists.txt  log_with_macros.cpp
examples/log_with_setters/: CMakeLists.txt  log_with_setters.cpp
include/: CMakeLists.txt  Compare.hpp  FileSystem.hpp  Generic.hpp  IteratorUtils.hpp  Locale.hpp  Logger.hpp  Pluto.hpp  Range.hpp  Standard.hpp  Stopwatch.hpp  StringUtils.hpp  pluto.hpp
include/Generic/: Compare.hpp  ContainerUtils.hpp  FileSystem.hpp  IteratorUtils.hpp  LRUCache.hpp  Locale.hpp  Logger.hpp  Range.hpp  SafeLRUCache.hpp  ScopeExitActions.hpp  Standard.hpp  Stopwatch.hpp  StringUtils.hpp
include/Pluto/: Compare.hpp  ContainerUtils.hpp  FileSystem.hpp  IteratorUtils.hpp  LRUCache.hpp  Locale.hpp  Logger.hpp  Range.hpp  SafeLRUCache.hpp  ScopeExitActions.hpp  Standard.hpp  Stopwatch.hpp  StringUtils.hpp
include/pluto/: compare.hpp  container.hpp  container_utils.hpp  filesystem.hpp  iterator.hpp  iterator_utils.hpp  locale.hpp  logger.hpp  lru_cache.hpp  platform.hpp  platform_utils.hpp  range.hpp  safe_lru_cache.hpp  scope.hpp  scope_exit_actions.hpp  scope_utils.hpp  standard.hpp  stopwatch.hpp  string.hpp  string_utils.hpp  thread_pool.hpp  unicode.hpp  value.hpp  value_utils.hpp  version.hpp
tests/: CMakeLists.txt  CompareTests.cpp  ContainerUtilsTests.cpp  GenericTests.cpp  IteratorUtilsTests.cpp  LRUCacheTests.cpp  LocaleTests.cpp  LoggerTests.cpp  Main.cpp  PlutoTests.cpp  RangeTests.cpp  SafeLRUCacheTests.cpp  ScopeExitActionsTests.cpp  StandardTests.cpp  StopwatchTests.cpp  StringUtilsTests.cpp  compare_tests.cpp  container_tests.cpp  container_utils_tests.cpp  filesystem_tests.cpp  generate_unicode.py  iterator_tests.cpp  iterator_utils_tests.cpp  locale_tests.cpp  logger_tests.cpp  lru_cache_tests.cpp  platform_tests.cpp  platform_utils_tests.cpp  pluto_tests.cpp  range_tests.cpp  safe_lru_cache_tests.cpp  scope_exit_actions_tests.cpp  scope_tests.cpp  scope_utils_tests.cpp  standard_tests.cpp  stopwatch_tests.cpp  string_tests.cpp  string_utils_tests.cpp  thread_pool_tests.cpp  unicode_tests.cpp  (+3 more)
