#
# Copyright (c) 2024 Stephen O Driscoll
#
# Distributed under the MIT License (See accompanying file LICENSE)
# Official repository: https://github.com/Stephen-ODriscoll/GenericUtils
#

add_subdirectory(CustomApp)
add_subdirectory(LogDefault)
add_subdirectory(LogHideSourceInfo)
add_subdirectory(LogNoSingleton)
add_subdirectory(LogSplitLevels)
add_subdirectory(LogWithMacros)
add_subdirectory(LogWithSetters)
