#
# Copyright (c) 2024 Stephen O Driscoll
#
# Distributed under the MIT License (See accompanying file LICENSE)
# Official repository: https://github.com/Stephen-ODriscoll/PlutoUtils
#

add_subdirectory(custom_app)
add_subdirectory(log_default)
add_subdirectory(log_extra_data)
add_subdirectory(log_hide_source_info)
add_subdirectory(log_no_singleton)
add_subdirectory(log_split_levels)
add_subdirectory(log_with_macros)
add_subdirectory(log_with_setters)
